# gtk-queries

./: .gitignore  Cargo.toml  README.md
assets/editor/: nb_highlight.xml
assets/gui/: #gtk-queries.glade#  #query-popover.glade#  area-box.glade  area-box.glade~  bar-box.glade  bar-box.glade~  conn-popover.glade  conn-popover.glade~  gnome-queries.glade  gnome-queries.glade~  gtk-plots-stack.glade  gtk-plots-stack.glade~  gtk-queries-box.glade  gtk-queries-box.glade~  gtk-queries-full.glade  gtk-queries-full.glade~  gtk-queries-funcs-popover-2.glade  gtk-queries-funcs-popover-2.glade~  gtk-queries-funcs-popover-3.glade~  gtk-queries-funcs-popover.glade  gtk-queries-funcs-popover.glade~  gtk-queries-funcs.glade~  gtk-queries-sidebar.glade  gtk-queries.glade  gtk-queries.glade~  gtk-tables-2.glade~  gtk-tables.glade~  gtkqueryview.glade~  line-box.glade  line-box.glade~  pgconnbutton.glade~  queries-header.glade~  query-popover-3.glade~  query-popover.glade  query-popover.glade~  scatter-box.glade  scatter-box.glade~  script-box.glade~  status-stack.glade  status-stack.glade~  (+7 more)
assets/plot_layout/: layout-four.xml  layout-horiz.xml  layout-single.xml  layout-three-bottom.xml  layout-three-left.xml  layout-three-right.xml  layout-three-top.xml  layout-unique.xml  layout-vert.xml  layout.xml  recent_paths.csv
assets/styles/: entry.css  tables.css
registry/: create.sql  registry.db
scripts/: parse_plot.py
src/: command.rs  conn_popover.rs  file_list.rs  header_toggle.rs  jobs.rs  lib.rs  main.rs  main_menu.rs  query_sidebar.rs  schema_list.rs  schema_tree.rs  sql_editor.rs  sql_popover.rs  status_stack.rs  table_notebook.rs  table_popover.rs  table_widget.rs  upload_popover.rs  utils.rs
src/functions/: .goutputstream-LBGFO0  cli_function.rs  exec.rs  function.rs  function_search.rs  function_search_old.rs  loader.rs  mod.rs  num_function.rs  parser.rs  parsing.rs  pg_exec.rs  registry.rs  sql_type.rs
src/plots/: design_menu.rs  layout_aux.rs  layout_menu.rs  layout_toolbar.rs  layout_window.rs  mapping_menu.rs  mod.rs  plot_popover.rs  plot_workspace.rs  save_widgets.rs  scale_menu.rs
src/plots/plotview/: context_mapper.rs  grid_segment.rs  mod.rs  plot_design.rs  plot_view.rs  text.rs
src/plots/plotview/mappings/: area.rs  bar.rs  line.rs  mod.rs  scatter.rs  surface.rs  text.rs
src/report/: client.rs  mod.rs
src/tables/: arrow.rs  column.rs  csv.rs  environment.rs  mod.rs  nullable_column.rs  pgvtab.rs  postgre.rs  source.rs  sql.rs  sqlite.rs  stdin.rs  table.rs
