[package]
name = "gtk-queries"
version = "0.1.0"
authors = ["Diego Lima <lima.ds@outlook.com>"]
edition = "2018"

[dependencies]
gtk = { version = "0.8.0", features = ["v3_16"] }
gio = "0.8.0"
glib = "0.9.1"
gdk = "0.12.0"
sourceview = "0.8.0"
cairo-rs = { version = "0.8.0", features = ["svg", "png"] }
regex = "1"
postgres = { version="0.17.4", features = [ "with-chrono-0_4" ] }
libloading = "0.5"
rusqlite = { version="0.23.1", features=["load_extension", "csvtab", "vtab", "functions", "serde_json", "backup" ] }
syn = { version = "1.0.17", features = ["full"] }
quote = "1.0.3"
toml = "0.5.6"
chrono = "0.4.13"
rust_decimal = { version = "1.7.0", features = ["db-postgres"] }
# csv = "1.1.1"
sqlparser = "0.6.1"
nalgebra = "0.21.0"
num-traits="0.2.11"
bayes = { git = "https://github.com/limads/bayes.git" }
# byteorder="1.3.4"
queries = { path = "../queries-ext" }
libxml = "0.2.13"
pango = "0.8.0"
proc-macro2 = "1.0.18"

[[bin]]
name="queries"
path="src/main.rs"

[lib]
name="gtk_queries"
path="src/lib.rs"


