[package]
name = "gtk-queries"
version = "0.1.0"
authors = ["Diego Lima <lima.ds@outlook.com>"]
edition = "2018"

[lib]
name="gtk_queries"
path="src/lib.rs"

[[bin]]
name="queries"
path="src/main.rs"

[dependencies]
gio = "0.9.1"
glib = "0.10.3"
gdk = "0.13.2"
gdk-pixbuf = "0.9.0"
gtk = { version = "0.9.2", features = ["v3_24_9"] }
sourceview = { version = "0.9.0", features = ["v3_16"] }
cairo-rs = { version = "0.9.1", features = ["svg", "png", "ps"] }
regex = { version = "1.4.2" }
postgres = { version="0.18.1", features = [ "with-chrono-0_4" ] }
libloading = "0.5"
rusqlite = { version="0.23.1", features=["load_extension", "csvtab", "vtab", "functions", "serde_json", "backup" ] }
syn = { version = "1.0.17", features = ["full"] }
quote = "1.0.3"
toml = "0.5.6"
chrono = "0.4.13"
rust_decimal = { version = "1.7.0", features = ["db-postgres"] }
sqlparser = "0.6.1"
nalgebra = "0.21.0"
num-traits="0.2.11"
bayes = { path = "../bayes" }
morlet = { path = "../morlet", features = ["gsl"] }
datafusion = { version = "1.0.0", optional = true }
arrow = { version = "1.0.0", optional = true }
libxml = "0.2.15"
pango = "0.9.1"
proc-macro2 = "1.0.18"
either = "1.6.1"
anyhow = "1.0.32"
pulldown-cmark = "0.8.0"
xml-rs = "0.8.3"

[features]
arrowext = []


